# texmacs-1

src/: CMakeLists.txt
src/TeXmacs/: CMakeLists.txt
src/TeXmacs/progs/: init-texmacs-s7.scm
src/misc/: CMakeLists.txt
src/src/: CMakeLists.txt
src/src/Plugins/Qt/: QTMWidget.cpp  qt_chooser_widget.cpp  qt_chooser_widget.hpp
